Deprecated: class.newInstance
Not a good idea to cache classmanager instance, but we're already caching the class...not sure what the plan was with Capabilities.classExists but now it makes more sense.